feat: added new name

--- a/clock-app/index.html
+++ b/clock-app/index.html
@@ -21,7 +21,7 @@
         <div class="digital" id="digital">--:--:-- --</div>
       </div>
 
-      <footer>Made with ❤️ by Samir</footer>
+      <footer>Made with ❤️ by Samir Jadhav</footer>
     </main>
 
     <script src="./script.js"></script>
